--- a/explorer/templates/flatpages/default.html
+++ b/explorer/templates/flatpages/default.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="centre-container">
       <h1>{{flatpage.title}}</h1>
-      {{ flatpage.content|safe }}
+      {{ flatpage.content|safe|markdown }}
     </div>
   </div>
 </div>
