--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -62,8 +62,8 @@ $(document).ready(function(){
       </div>
       <div class="modal-video">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/fNk-VL57HUg" frameborder="0"
-                  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/fNk-VL57HUg?rel=0&amp;showinfo=0" frameborder="0"
+              allow="autoplay; encrypted-media" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
       <div class="modal-footer">
