--- a/explorer/static/explorer/css/layout.css
+++ b/explorer/static/explorer/css/layout.css
@@ -52,6 +52,10 @@ h1 {
   font-size:1.5rem;
 }
 
+.dropdown {
+  display:inline-block;
+}
+
 p.statement {
   font-size:2rem;
   font-family: 'Oswald', sans-serif;
