--- a/explorer/templates/explorer/challenge-base.html
+++ b/explorer/templates/explorer/challenge-base.html
@@ -7,20 +7,22 @@
 
 {% block menubar %}
 <div class="container-fluid">
+  <div class="dropdown">
+    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <i class="far fa-bars"></i>
+    </a>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <a class="dropdown-item" href="/">{% trans "Home" %}</a>
+      <a class="dropdown-item" href="/about/">{% trans "About Serol" %}</a>
+      <a class="dropdown-item" href="/videos/">{% trans "Videos" %}</a>
+      <a class="dropdown-item" href="{% url 'missions' %}">{% trans "Missions" %}</a>
+      <a class="dropdown-item" href="{% url 'stickers' %}">{% trans "My Progress" %}</a>
+      <a class="dropdown-item" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
+    </div>
+  </div>
   <div class="navbar-brand">
     <a  href="/"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
     <span class="nav-heading">Challenge {{object.number}} : {{object.name}}</span>
-  </div>
-  <a class="dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <i class="far fa-bars"></i>
-  </a>
-  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-    <a class="nav-link" href="/">{% trans "Home" %}</a>
-    <a class="nav-link" href="/about/">{% trans "About Serol" %}</a>
-    <a class="nav-link" href="/videos/">{% trans "Videos" %}</a>
-    <a class="nav-link" href="{% url 'missions' %}">{% trans "Missions" %}</a>
-    <a class="nav-link" href="{% url 'stickers' %}">{% trans "My Progress" %}</a>
-    <a class="nav-link" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
   </div>
 
   <div class="corner-ribbon sticky shadow mission-{{object.mission.number}}-colour"><h2>{% trans "Mission" %} {{object.mission.number}}</h2></div>
