--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -117,7 +117,7 @@ $(document).ready(function(){
     {% if targets %}
     {% for target in targets %}
     <div class="col-lg-4  col-sm-6 pb-5 target-holder">
-        <a href="#" id="target-img-{{target}}" data-toggle="modal" data-target="#targetModal" data-tid="{{target.id}}" data-name="{{target.name}}">
+        <a href="#" id="target-img-{{target.id}}" data-toggle="modal" data-target="#targetModal" data-tid="{{target.id}}" data-name="{{target.name}}">
             {% with "explorer/images/"|add:target.icon as icon_url %}<img class="img-fluid" src="{% static icon_url %}" alt="">
             <div class="target-name-holder">
               <span class="target-name">{{target.name}}</span>
