Remove dependency on tracking_num

--- a/explorer/templates/explorer/challenge-analyser.html
+++ b/explorer/templates/explorer/challenge-analyser.html
@@ -7,7 +7,7 @@
 <script src="{% static 'explorer/js/utils.js' %}" ></script>
 <script>
 var answers = Array();
-var requestid = {{ progress.requestids}};
+var requestid = {{ progress.requestid}};
 var frameid;
 var current_question=0;
 var question_total={{questions|length}};
