--- a/explorer/templates/explorer/challenge-submitted.html
+++ b/explorer/templates/explorer/challenge-submitted.html
@@ -90,7 +90,7 @@
 {% block script-content %}
 <script src="{% static "explorer/js/utils.js" %}"  type="text/javascript" ></script>
 <script>
-var requestid = "{{progress.userrequestid}}";
+var requestid = "{{progress.requestid}}";
 var resp;
 var resp_tmp;
 var redirect_url = "{% url 'challenge' object.id %}";
