--- a/explorer/templates/explorer/challenge-summary.html
+++ b/explorer/templates/explorer/challenge-summary.html
@@ -23,7 +23,7 @@
         </p>
         </div>
         <div class="col-lg-8">
-          <img src="http://placehold.it/300x300" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
+          <img src="{% static 'explorer/images/placeholder.jpg' %}" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
           <p>Your picture of {{progress.target}}</p>
         </div>
     </div>
