--- a/app/explorer/templates/explorer/missionlist.html
+++ b/app/explorer/templates/explorer/missionlist.html
@@ -10,7 +10,9 @@
   <div class="row  info-blue">
   {% for mission in object_list %}
     <div class="col-4">
-      <img src="{{MEDIA_PREFIX}}{{mission.patch}}" class="img-fluid"/>
+      {% with "explorer/"|add:mission.patch as icon_url %}
+      <img class="img-fluid" src="{% static icon_url %}"  alt="Mission {{mission.number}} patch">
+      {% endwith %}
       <h2>{% trans "Mission" %} {{mission.number}}</h1>
       <h3 class="mission-name">{{mission.name|safe}}</h1>
         {% if request.user|user_mission_state:mission.number %}
