--- a/app/stickers/templates/stickers/sticker_list.html
+++ b/app/stickers/templates/stickers/sticker_list.html
@@ -20,7 +20,9 @@
       <div class="row">
         <div class="col-4">
           <h2>{{mission.name}}</h2>
-          <img src="{{MEDIA_PREFIX}}{{mission.patch}}" alt="Mission {{mission.number}} patch" class="img-fluid rounded" />
+          {% with "explorer/"|add:mission.patch as icon_url %}
+          <img class="img-fluid rounded" src="{% static icon_url %}"  alt="Mission {{mission.number}} patch">
+          {% endwith %}
         </div>
         <div class="col-8">
           <div class="row">
@@ -28,7 +30,11 @@
           {% for  sticker in challenge.sticker_set.all %}
             {% if sticker in object_list %}
               <div class="col-4">
-                <a href="{% url 'summary' sticker.challenge.pk %}"><img src="{{MEDIA_PREFIX}}{{sticker.filename}}" alt="{{sticker.challenge.name}}" class="img-fluid" /></a>
+                <a href="{% url 'summary' sticker.challenge.pk %}">
+                  {% with "explorer/"|add:sticker.filename as icon_url %}
+                  <img class="img-fluid" src="{% static icon_url %}"  alt="{sticker.challenge.name}}">
+                  {% endwith %}
+                </a>
                 <p>{{sticker.challenge.name}}</p>
               </div>
             {% else %}
