--- a/app/explorer/templates/explorer/mission.html
+++ b/app/explorer/templates/explorer/mission.html
@@ -11,13 +11,14 @@
     <div class="col-12  mission-content">
       <h1>{% trans "Mission" %} {{object.number}}</h1>
       <h1 class="mission-name">{{object.name|safe}}</h1>
-      <p><a class="btn btn-info btn-lg animated tada" href="{% url 'challenge' current_challenge.pk %}" role="button">
+      <p>
+        <a href="{% url 'challenge-next' object.number %}" class="btn btn-info btn-lg animated tada">
         {% if mission.pk in active_missions %}
         {% trans "Continue mission" %} &raquo;</a>
         {% else %}
         {% trans "Start mission" %} &raquo;</a>
         {% endif %}
-         &raquo;</a></p>
+        </a></p>
     </div>
   </div>
 </div>
