--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -31,7 +31,7 @@
               <li class="nav-item"><a class="nav-link" href="/about/">{% trans "About Serol" %}</a></li>
               <li class="nav-item"><a class="nav-link" href="/videos/">{% trans "Videos" %}</a></li>
               <li class="nav-item"><a class="nav-link" href="/resources/">{% trans "Resources" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="{% url 'missions' %}">{% trans "Missions" %}</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'missions' %}" id="missions-menu-item">{% trans "Missions" %}</a></li>
 
               {% if request.user.is_authenticated %}
               <li class="nav-item nav-separator"><a class="nav-link" href="{% url 'stickers' %}">{% trans "My Progress" %}</a></li>
@@ -40,6 +40,16 @@
               <li class="nav-item nav-separator" id="login"><a class="nav-link" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
               {% endif %}
             </ul>
+            <div class="dropdown">
+              <a class="btn btn-md btn-4 btn-4a dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Video Game
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a href="/game/">
+                  <img src="{% static 'explorer/images/titlescreensquare.png' %}" alt="serol game button" class="img-fluid" />
+                </a>
+              </div>
+            </div>
           </div>
         </nav>
         {% endblock%}
