--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -7,6 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{% static "explorer/images/favicon.gif" %}">
+    <link rel="icon" href="{% static "explorer/images/favicon.ico" %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "explorer/images/apple-touch-icon.png" %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "explorer/images/favicon-32x32.png" %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "explorer/images/favicon-16x16.png" %}">
 
     <title>Serol's Cosmic Adventures | {% block title %}powered by Las Cumbres Observatory{% endblock %}</title>
 
