Dockerfile fix; status update

--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -6,70 +6,9 @@
 {% block main-content %}
       <div class="row">
         <div class="col-6 offset-2">
-        <div id="serol-figure">
-        <div id="svg-container">
-          <svg xmlns="http://www.w3.org/2000/svg" width="600" height="600" viewBox="0 0 365.5 346.8" preserveAspectRatio="xMaxYMax meet">
 
-          <path d="M124.2 294.2h-5.1c-1.3 0-2.4 1.1-2.4 2.4v30.7c0 1.3 1.1 2.4 2.4 2.4h5.1c1.3 0 2.4-1.1 2.4-2.4v-30.7C126.6 295.3 125.5 294.2 124.2 294.2z" class="a"/>
-          <path d="M247.1 293.8h-5.1c-1.3 0-2.4 1.1-2.4 2.4v30.7c0 1.3 1.1 2.4 2.4 2.4h5.1c1.3 0 2.4-1.1 2.4-2.4v-30.7C249.5 294.8 248.4 293.8 247.1 293.8z" class="a"/>
-          <path d="M263.4 178.1c-2.5 0-4.4 2-4.4 4.4v20.6c0 2.5 2 4.4 4.4 4.4s4.4-2 4.4-4.4v-20.6C267.8 180.1 265.9 178.1 263.4 178.1z" class="b"/>
-          <path d="M102.6 178.1c-2.5 0-4.4 2-4.4 4.4v20.6c0 2.5 2 4.4 4.4 4.4s4.4-2 4.4-4.4v-20.6C107 180.1 105.1 178.1 102.6 178.1z" class="b"/>
-          <path d="M94 206.6l-2.6-14c1.7-0.3 3.4-0.4 5.1-0.4l-0.3 14.2C95.5 206.5 94.7 206.5 94 206.6z" class="a"/>
-          <path
-              d="M50.3 270.7l-14-4.7c0.9-2.3 1.7-4.6 2.6-6.9l13.9 5C52 266.3 51.2 268.5 50.3 270.7zM55.5 257.6l-13.8-5.3c1-2.3 2-4.6 3-6.8l13.6 5.7C57.4 253.2 56.4 255.4 55.5 257.6zM61.3 244.8l-13.4-6c1.1-2.3 2.3-4.5 3.4-6.7l13.2 6.5C63.4 240.5 62.4 242.6 61.3 244.8zM67.9 232.5l-12.9-7c1.3-2.3 2.7-4.4 4-6.5l12.5 7.6C70.3 228.5 69.1 230.4 67.9 232.5zM75.5 221.1l-12-8.4c1.7-2.2 3.4-4.3 5.1-6.1l11.1 9.4C78.4 217.5 76.9 219.2 75.5 221.1zM84.4 211.6l-9.7-10.8c2.4-2 4.9-3.7 7.4-5l7.1 12.5C87.7 209.2 86 210.3 84.4 211.6z"
-              class="a"/>
-              <path d="M46.9 280.7l-14.1-4.3c0.4-1.1 0.8-2.3 1.2-3.5l14.1 4.4C47.6 278.5 47.2 279.6 46.9 280.7z" class="a"/>
-              <path d="M272.6 199.2l2.6-14.9c-1.7-0.3-3.4-0.5-5.1-0.4l0.3 15.1C271.1 199 271.9 199 272.6 199.2z" class="a"/>
-              <path
-              d="M315.6 267.3l13.8-5c-0.8-2.5-1.7-4.9-2.6-7.3l-13.7 5.3C314 262.6 314.8 264.9 315.6 267.3zM310.5 253.3l13.5-5.7c-1-2.5-1.9-4.9-2.9-7.2l-13.4 6C308.7 248.7 309.6 251 310.5 253.3zM304.8 239.7l13.2-6.4c-1.1-2.4-2.2-4.8-3.4-7.1l-13 6.9C302.7 235.2 303.7 237.4 304.8 239.7zM298.3 226.6l12.7-7.4c-1.3-2.4-2.7-4.7-4-6.9l-12.3 8.1C295.9 222.3 297.1 224.4 298.3 226.6zM290.8 214.5l11.8-8.9c-1.7-2.3-3.4-4.5-5.1-6.5l-10.9 10C288 210.7 289.4 212.5 290.8 214.5zM282.1 204.4l9.5-11.5c-2.4-2.1-4.8-3.9-7.3-5.3l-7 13.3C278.8 201.8 280.5 203 282.1 204.4z"
-              class="a"/>
-              <path d="M319 277.9l13.9-4.5c-0.4-1.2-0.7-2.4-1.1-3.7l-13.9 4.7C318.3 275.6 318.7 276.7 319 277.9z" class="a"/>
-              <polygon points="32 282.1 17.9 301.9 35 325.3 40.4 320.6 32.5 305 43.1 291.1 41.4 283.3 " class="b"/>
-              <path d="M29.3 275.9c-1.9-0.3-3.7 1.1-4 3l0 0c-0.3 1.9 1.1 3.7 3 4l17.5 2.5c1.9 0.3 3.7-1.1 4-3l0 0c0.3-1.9-1.1-3.7-3-4L29.3 275.9z" class="a"/>
-              <polygon points="334.9 279 348.9 298.7 331.8 322.2 326.5 317.5 334.3 301.8 323.8 287.9 325.4 280.2 " class="b"/>
-              <path d="M337.5 272.7c1.9-0.3 3.7 1.1 4 3l0 0c0.3 1.9-1.1 3.7-3 4l-17.5 2.5c-1.9 0.3-3.7-1.1-4-3l0 0c-0.3-1.9 1.1-3.7 3-4L337.5 272.7z" class="a"/>
-              <path d="M268.1 289.4h-12.7c-1.3 0-2.4 1.1-2.4 2.4v1.2c0 1.3 1.1 2.4 2.4 2.4h12.7c1.3 0 2.4-1.1 2.4-2.4v-1.2C270.5 290.5 269.4 289.4 268.1 289.4z" class="a"/>
-              <path d="M268.6 275.3h-12.7c-1.3 0-2.4 1.1-2.4 2.4v1.2c0 1.3 1.1 2.4 2.4 2.4h12.7c1.3 0 2.4-1.1 2.4-2.4v-1.2C271 276.4 269.9 275.3 268.6 275.3z" class="a"/>
-              <path d="M268.1 268.1h-12.7c-1.3 0-2.4 1.1-2.4 2.4v1.2c0 1.3 1.1 2.4 2.4 2.4h12.7c1.3 0 2.4-1.1 2.4-2.4v-1.2C270.5 269.2 269.4 268.1 268.1 268.1z" class="a"/>
-              <path d="M251.4 177.1h-136.7c-5.3 0-9.6 4.3-9.6 9.6v108.4c0 5.3 4.3 9.6 9.6 9.6h136.7c5.3 0 9.6-4.3 9.6-9.6v-108.4C261 181.4 256.7 177.1 251.4 177.1z" class="b"/>
-              <path d="M241.9 189.8h-117.6c-4 0-7.2 3.2-7.2 7.2v87.8c0 4 3.2 7.2 7.2 7.2h117.6c4 0 7.2-3.2 7.2-7.2v-87.8C249.1 193.1 245.9 189.8 241.9 189.8z" class="f display-region"/>
-              <rect x="176.6" y="150" width="14.2" height="28.4" class="a"/>
-              <path d="M263.3 340c0 8.1-8.4 6.7-18.8 6.7 -10.4 0-18.8 1.4-18.8-6.7s8.4-14.7 18.8-14.7C254.9 325.3 263.3 331.9 263.3 340z" class="b"/>
-              <path d="M140.5 340c0 8.1-8.4 6.7-18.8 6.7 -10.4 0-18.8 1.4-18.8-6.7s8.4-14.7 18.8-14.7C132 325.3 140.5 331.9 140.5 340z" class="b"/>
-              <g class="serol-head">
-              <path d="M53 25.4h-1.2c-1.3 0-2.4 1.1-2.4 2.4v12.7c0 1.3 1.1 2.4 2.4 2.4h1.2c1.3 0 2.4-1.1 2.4-2.4V27.8C55.4 26.5 54.4 25.4 53 25.4z" class="a"/>
-              <path d="M41.3 44.2h-12.7c-1.3 0-2.4 1.1-2.4 2.4v1.2c0 1.3 1.1 2.4 2.4 2.4h12.7c1.3 0 2.4-1.1 2.4-2.4v-1.2C43.7 45.2 42.6 44.2 41.3 44.2z" class="a"/>
-              <path d="M41.3 53.5h-12.7c-1.3 0-2.4 1.1-2.4 2.4v1.2c0 1.3 1.1 2.4 2.4 2.4h12.7c1.3 0 2.4-1.1 2.4-2.4v-1.2C43.7 54.6 42.6 53.5 41.3 53.5z" class="a"/>
-              <polygon points="186.4 0 181.2 41.8 192 40.8 " class="a"/>
-              <path d="M194.8 24.6h-17c-2.6 0-4.6 2.1-4.6 4.6 0 2.6 2.1 4.6 4.6 4.6h17c2.6 0 4.6-2.1 4.6-4.6C199.4 26.7 197.3 24.6 194.8 24.6z" class="g"/>
-              <path d="M200.1 30.4h-28.4c-2.6 0-4.6 2.1-4.6 4.6 0 2.6 2.1 4.6 4.6 4.6h28.4c2.6 0 4.6-2.1 4.6-4.6C204.7 32.5 202.6 30.4 200.1 30.4z" class="a"/>
-              <ellipse cx="186.6" cy="3.5" rx="3.4" ry="3.4" class="g serol-antenna"/>
-              <polygon points="323.8 94.8 324.8 105.6 365.5 100 " class="a"/>
-              <path d="M336.3 86.7L336.3 86.7c-2.6 0-4.6 2.1-4.6 4.6v17c0 2.6 2.1 4.6 4.6 4.6h0c2.6 0 4.6-2.1 4.6-4.6V91.4C340.9 88.8 338.8 86.7 336.3 86.7z" class="g"/>
-              <path d="M330.5 80.6c-2.6 0-4.6 2.1-4.6 4.6v28.4c0 2.6 2.1 4.6 4.6 4.6s4.6-2.1 4.6-4.6V85.3C335.1 82.7 333.1 80.6 330.5 80.6z" class="a"/>
-              <ellipse cx="362" cy="100.2" rx="3.4" ry="3.4" class="g serol-antenna"/>
-              <polygon points="40.8 92.2 0 97.8 41.8 103 " class="a"/>
-              <path d="M29.2 84.7L29.2 84.7c-2.6 0-4.6 2.1-4.6 4.6v17c0 2.6 2.1 4.6 4.6 4.6h0c2.6 0 4.6-2.1 4.6-4.6V89.4C33.9 86.8 31.8 84.7 29.2 84.7z" class="g"/>
-              <path d="M35 79.4c-2.6 0-4.6 2.1-4.6 4.6v28.4c0 2.6 2.1 4.6 4.6 4.6s4.6-2.1 4.6-4.6V84.1C39.7 81.5 37.6 79.4 35 79.4z" class="a"/>
-              <ellipse cx="3.5" cy="97.5" rx="3.4" ry="3.4" class="g serol-antenna"/>
-              <path d="M321 34.6H45.4c-5.3 0-9.6 4.3-9.6 9.6v108.4c0 5.3 4.3 9.6 9.6 9.6h275.6c5.3 0 9.6-4.3 9.6-9.6V44.2C330.6 38.9 326.3 34.6 321 34.6z" class="g"/>
-              <path d="M301 50.9H65.5c-6.6 0-12 5.4-12 12v71.3c0 6.6 5.4 12 12 12h235.4c6.6 0 12-5.4 12-12v-71.3C313 56.3 307.6 50.9 301 50.9z" fill="#D9D9DC"/>
-              <polygon points="149.5 123.1 163.6 138.2 208.6 135.5 217.4 128.7 " class="f serol-mouth-normal" />
-              <polygon points="149.5 120.1 163.6 138.2 208.6 138.2 217.4 120.1 " class="f serol-mouth-shock" style="display:none;"/>
-                <g class="serol-eyes">
-                  <ellipse cx="104.5" cy="106.9" rx="23.8" ry="23.9" class="f"/>
-                  <ellipse cx="113" cy="100.9" rx="7.4" ry="7.8" class="h serol-pupil-normal" />
-                  <ellipse cx="104.5" cy="106.9" rx="7.4" ry="7.8" class="h serol-pupil-shock"  style="display:none;"/>
-                </g>
-              <g class="serol-eyes">
-                <ellipse cx="260" cy="106.9" rx="23.8" ry="23.9" class="f"/>
-                <ellipse cx="268.4" cy="101.2" rx="7.4" ry="7.8" class="h serol-pupil-normal" />
-                <ellipse cx="260" cy="106.9" rx="7.4" ry="7.8" class="h serol-pupil-shock" style="display:none;"/>
-              </g>
-            </g>
-            </svg>
-            </div>
-          </div>
+          <div id="clock"></div>
+
           <div id="status-info">
             <span id="request-site"><i class="far fa-cog fa-w-16 fa-spin fa-3x fa-fw"></i></span>
           </div>
@@ -89,6 +28,7 @@
 
 {% block script-content %}
 <script src="{% static "explorer/js/utils.js" %}"  type="text/javascript" ></script>
+<script src="{% static "explorer/js/lottie.js" %}"  type="text/javascript" ></script>
 <script>
 var requestid = "{{progress.requestid}}";
 var resp;
@@ -97,5 +37,18 @@ var redirect_url = "{% url 'challenge' object.id %}";
 $(document).ready(function(){
   resp = status_request(requestid, localStorage.getItem('token'));
 });
+var anim;
+var animData = {
+    container: document.getElementById('clock'),
+    renderer: 'svg',
+    loop: true,
+    autoplay: true,
+    autoloadSegments: true,
+    rendererSettings: {
+        progressiveLoad:false
+    },
+    path: '{% static "explorer/js/clock.json" %}'
+};
+anim = lottie.loadAnimation(animData);
 </script>
 {% endblock%}
