--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -1,6 +1,8 @@
 {% extends 'explorer/challenge-base.html' %}
 {% load static i18n %}
 
+{% block title %}{% trans "Observation Status" %}{% endblock %}
+
 {% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
 
 {% block main-content %}
@@ -24,6 +26,19 @@
     </div>
 
     <div class="row">
+      <div class="col-5 offset-2">
+        <h3>{% trans "Fun Fact" %}</h3>
+        <div id="fact-box">
+        </div>
+      </div>
+
+      <div class="col-2">
+        <h3>When:</h3>
+        <div id="clock"></div>
+      </div>
+
+      <div class="col-3">
+      </div>
 
     </div>
 
