Styles for status page

--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -25,10 +25,10 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mt-2">
       <div class="col-5 offset-2">
         <h3>{% trans "Fun Fact" %}</h3>
-        <div id="fact-box">
+        <div class="fact-box rounded">
         </div>
       </div>
 
@@ -37,7 +37,15 @@
         <div id="clock"></div>
       </div>
 
-      <div class="col-3">
+      <div class="col-2">
+        <div class="calendar-outer rounded mt-5">
+          <div class="calendar-inner-wrapper p-2">
+          <div class="calendar-inner rounded mx-auto">
+            <h3 class="info">30</h3>
+          </div>
+          <h3 class="info">seconds</h3>
+          </div>
+        </div>
       </div>
 
     </div>
