--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -3,11 +3,13 @@
 
 {% block title %}{% trans "Observation Status" %}{% endblock %}
 
-{% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
+{% block mission-class %}{%endblock%}
 
 {% block main-content %}
+<div class="container-fluid">
       <div class="row">
-        <div class="col-5 offset-2">
+        <div class="col-5">
+          <h3>{% trans "While you wait, try Serol's ...." %} <a href="" class="btn btn-lg btn-4 btn-4a animated tada" >{% trans "Video Game" %}</a></h3>
           <div id="status-serol"></div>
         </div>
 
@@ -26,9 +28,10 @@
     </div>
 
     <div class="row mt-2">
-      <div class="col-5 offset-2">
+      <div class="col-5 offset-1">
         <h3>{% trans "Fun Fact" %}</h3>
-        <div class="fact-box rounded">
+        <div class="fact-box rounded p-2">
+          <p>{% trans "loading..."%}</p>
         </div>
       </div>
 
@@ -41,15 +44,15 @@
         <div class="calendar-outer rounded mt-5">
           <div class="calendar-inner-wrapper p-2">
           <div class="calendar-inner rounded mx-auto">
-            <h3 class="info">30</h3>
+            <h3 class="info">?</h3>
           </div>
-          <h3 class="info">seconds</h3>
+          <h3 class="info"></h3>
           </div>
         </div>
       </div>
 
     </div>
-
+</div>
 {% endblock %}
 
 {% block script-content %}
@@ -62,6 +65,7 @@ var resp_tmp;
 var redirect_url = "{% url 'challenge' object.id %}";
 $(document).ready(function(){
   resp = status_request(requestid, localStorage.getItem('token'));
+  get_facts();
 });
 var anim;
 var animData = {
