Correcting mariadb in dockerfile; game url

--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -9,7 +9,7 @@
 <div class="container-fluid">
       <div class="row">
         <div class="col-5">
-          <h3>{% trans "While you wait, try Serol's ...." %} <a href="" class="btn btn-lg btn-4 btn-4a animated tada" >{% trans "Video Game" %}</a></h3>
+          <h3>{% trans "While you wait, try Serol's ...." %} <a href="/game/" class="btn btn-lg btn-4 btn-4a animated tada" target=_top>{% trans "Video Game" %}</a></h3>
           <div id="status-serol"></div>
         </div>
 
