--- a/app/explorer/templates/explorer/challenge-observe.html
+++ b/app/explorer/templates/explorer/challenge-observe.html
@@ -12,6 +12,8 @@ var image_files = {
     '5.1.4' : "{% static 'explorer/images/5.1.4-elliptical_galaxy.png' %}",
     '5.1.6' : "{% static 'explorer/images/5.1.6-interacting_galaxy.png' %}",
     '4.1.4' : "{% static 'explorer/images/4.1.4-supernova_remnant.png' %}",
+    '4.1.3' : "{% static 'explorer/images/4.1.3-planetary_nebula.png' %}",
+    '4' : "{% static 'explorer/images/4-nebula.png' %}",
     '3.6.4.1' : "{% static 'explorer/images/3.6.4.1-open_cluster.png' %}",
     '3.6.4.2' : "{% static 'explorer/images/3.6.4.2-globular_cluster.png' %}",
     '2.3' : "{% static 'explorer/images/2.3-asteroid.png' %}",
