--- a/app/explorer/templates/explorer/challenge-summary.html
+++ b/app/explorer/templates/explorer/challenge-summary.html
@@ -16,7 +16,7 @@
           </p>
           {% endfor %}
           <p>
-          {% if object.is_last %}
+          {% if object.is_last or object.mission.number in completed_missions %}
           <a href="{% url 'missions' %}" class="btn btn-4 btn-4a">{% trans "start a new mission?" %}</a><br/>
           <a href="{% url 'stickers' %}" class="btn btn-4 btn-4a">{% trans "see your stickers" %}</a>
           {% else %}
