--- a/app/explorer/templates/explorer/challenge-summary.html
+++ b/app/explorer/templates/explorer/challenge-summary.html
@@ -25,7 +25,7 @@
         </p>
         </div>
         <div class="col-lg-8">
-          <img src="{% if progress.image_file %}/images/{{ progress.image_file }}{% else %}{% static 'explorer/images/placeholder.jpg' %}{% endif %}" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
+          <img src="{% if progress.image_file %}{{ MEDIA_PREFIX }}{{ progress.image_file }}{% else %}{% static 'explorer/images/placeholder.jpg' %}{% endif %}" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
           <p>Your picture of {{progress.target}}</p>
         </div>
     </div>
@@ -44,12 +44,12 @@
 <script src="{% static 'explorer/js/utils.js' %}" ></script>
 <script>
 var frameid = {{ progress.frameids}};
-var my_image {% if progress.image_file %} = "/images/{{ progress.image_file }}"{% endif %};
+var my_image {% if progress.image_file %} = "{{ MEDIA_PREFIX }}{{ progress.image_file }}"{% endif %};
 
 $(document).ready(function(){
 
-  if (my_image.length == 0){
-    get_colour_image(localStorage.getItem('archive_token'), frameid, mode='analyser')
+  if (typeof(my_image) != 'undefined'){
+    get_colour_image(localStorage.getItem('archive_token'), frameid, mode='summary')
   }
 
 });
