--- a/app/explorer/templates/explorer/challenge-base.html
+++ b/app/explorer/templates/explorer/challenge-base.html
@@ -9,7 +9,7 @@
 <div class="container-fluid">
   <div class="dropdown">
     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <i class="far fa-bars"></i>
+      {% trans "menu" %}
     </a>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
       <a class="dropdown-item" href="/">{% trans "Home" %}</a>
@@ -20,6 +20,7 @@
       <a class="dropdown-item" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
     </div>
   </div>
+
   <div class="navbar-brand">
     <a  href="/"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
     <span class="nav-heading">Challenge {{object.number}} : {{object.name}}</span>
