--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -42,6 +42,7 @@
               <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a></li>
               {% else %}
               <li class="nav-item nav-separator" id="login"><a class="nav-link" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
+              <li class="nav-item " id="register"><a class="nav-link" href="{% url 'registration_register' %}">{% trans "Register" %}</a></li>
               {% endif %}
             </ul>
             <div class="dropdown">
