--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -61,10 +61,9 @@
 <script>
 var requestid = "{{progress.requestid}}";
 var resp;
-var resp_tmp;
 var redirect_url = "{% url 'challenge' object.id %}";
 $(document).ready(function(){
-  resp = status_request(requestid, localStorage.getItem('token'));
+  resp = status_request(requestid, "{{ request.session.token }}");
   get_facts();
 });
 var anim;
